Fix sidebar header and background color. Adds extra space between line items vertically.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ h1 {
 .sidebar {
   display: flex;
   color: rgb(156, 156, 78);
-  width: 15%;
+  width: fit-content;
   float: right;
   background-color: rgb(29, 96, 85);
   align-items: center;
@@ -15,7 +15,7 @@ h1 {
 }
 
 .box {
-  width: fit-content;
+  width: fit-content; 
   padding: 10px;
   border: solid black;
   border-width: 4px;
@@ -24,7 +24,7 @@ h1 {
 
 p {
   text-align: center;
-  color: rgb(183, 183, 60);
+  color: rgb(212, 212, 92);
   font-size: larger;
   font-family: Arial;
 }
@@ -79,4 +79,5 @@ p {
 li {
   font-size: large;
   font-family: Arial;
+  margin: 15px;
 }
